# OpenGLES2.0_Doc

./: settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/rzm/opengles_doc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: abs_fragment_shader.fs  abs_vertex_shader.vs  blur_texture_image_fragment.fs  blur_texture_image_vertex.vs  camera_oes_vertex_shader.vs  cool_texture_image_fragment.fs  cool_texture_image_vertex.vs  cube_vertex_shader.vs  egl_gray_fragment.fs  egl_gray_vertex.vs  fbo_fragment_shader.fs  fbo_vertex_shader.vs  gray_texture_image_fragment.fs  lbjn_0079.pkm  lbjn_0079_alpha.pkm  lbjn_0091.pkm  lbjn_0091_alpha.pkm  magnifier_texture_image_fragment.fs  magnifier_texture_image_vertex.vs  pkm_fragment_shader.fs  pkm_vertex_shader.vs  simple_vertex_shader_matrix.vs  texture_image_fragment.fs  texture_image_vertex.vs  transform_vertex_shader.vs  warm_texture_image_fragment.fs  yuv_420.yuv  yuv_420_fragment.fs  yuv_420_vertex.vs
app/src/main/cpp/: AbsGlRender.cpp  AbsGlRender.h  BlendColorRenderScheduler.cpp  CMakeLists.txt  CameraRender.cpp  CameraRender.h  CoolTextureImageRender.cpp  CoolTextureImageRender.h  Cube.cpp  Cube.h  CubeRender.cpp  CubeRender.h  CubeTransformRender.cpp  CubeTransformRender.h  CubeTransformRenderScheduler.cpp  EGLGrayFilter.cpp  EGLGrayFilter.h  EglBackgroundRender.cpp  EtcRender.cpp  EtcRender.h  EtcRenderScheduler.cpp  FboRender.cpp  FboRender.h  FboRenderScheduler.cpp  GLUtils.cpp  GLUtils.h  GrayFilter.cpp  GrayFilter.h  GrayTextureImageRender.cpp  GrayTextureImageRender.h  GrayTextureImageRenderScheduler.cpp  MagnifierTextureImageRender.cpp  NativeAssetsLoader.cpp  SquareRender.cpp  SquareRender.h  SquareRenderScheduler.cpp  TextureImageRender.cpp  TextureImageRender.h  TextureImageRenderScheduler.cpp  TextureRender.cpp  (+16 more)
app/src/main/cpp/gles2/: AbsGlRender.cpp  AbsGlRender.h  BlurTextureImageRender.cpp  BlurTextureImageRender.h  BlurTextureImageRenderScheduler.cpp  CameraRender.cpp  CameraRender.h  CameraRenderScheduler.cpp  CoolTextureImageRender.cpp  CoolTextureImageRender.h  CoolTextureImageRenderScheduler.cpp  Cube.h  CubeRender.cpp  CubeRender.h  CubeRenderScheduler.cpp  CubeTransformRender.h  CubeTransformRenderScheduler.cpp  EGLGrayFilter.h  EglCore.cpp  EglCore.h  EtcRender.cpp  EtcRender.h  EtcRenderScheduler.cpp  FboRender.h  FboRenderScheduler.cpp  GLUtils.cpp  GLUtils.h  GrayTextureImageRender.cpp  GrayTextureImageRender.h  GrayTextureImageRenderScheduler.cpp  MagnifierTextureImageRender.cpp  MagnifierTextureImageRender.h  MagnifierTextureImageRenderScheduler.cpp  NativeAssetsLoader.cpp  NativeAssetsLoader.h  SquareRender.cpp  SquareRender.h  SquareRenderScheduler.cpp  TextureImageRender.cpp  TextureImageRender.h  (+20 more)
app/src/main/cpp/gles3/: JNI.cpp  OpenglUtils.cpp  OpenglUtils.h  RenderManager.cpp  RenderManager.h
app/src/main/cpp/gles3/render/: GLBaseRender.cpp  GLBaseRender.h  GLCoordinateSystemRender.cpp  GLCoordinateSystemRender.h  GLDepthTestRender.cpp  GLDepthTestRender.h  GLFboLongLegRender.cpp  GLFboLongLegRender.h  GLFboRender.cpp  GLFboRender.h  GLLongLegRender.cpp  GLLongLegRender.h  GLTextureRender.cpp  GLTextureRender.h  GLTriangleRender.cpp  GLTriangleRender.h  GLVaoRender.cpp  GLVaoRender.h  GLYuvTextureRender.cpp  GLYuvTextureRender.h
app/src/main/java/com/rzm/opengles_doc/: CameraGlSurfaceView.java  MainActivity.java  MainGLES2Activity.java  MainGLES3Activity.java  MyGlSurfaceView.java  MyGlSurfaceView2.java
app/src/main/java/com/rzm/opengles_doc/egl/: EGLBackgroundRender.java
app/src/main/java/com/rzm/opengles_doc/gles3/: GLViewAdapter.java  JavaGLRender.java  NativeRender.java
app/src/main/java/com/rzm/opengles_doc/render/: BlendColorRender.java  BlurTextureImageRender.java  CameraRender.java  CoolTextureImageRender.java  CubeRender.java  CubeTransformRender.java  EtcRender.java  FboRender.java  GrayTextureImageRender.java  MagnifierTextureImageRender.java  SquareRender.java  TextureImageRender.java  TriangleRender.java  TriangleRenderWithMatrix.java  TriangleRenderWithMatrix_VAO.java  TriangleRenderWithMatrix_VBO_EBO.java  WarmTextureImageRender.java  YUV420Render.java
app/src/main/java/com/rzm/opengles_doc/simple/: BlendColorActivity.java  BlurTextureImageActivity.java  CameraActivity.java  CoolTextureImageActivity.java  CubeShapeActivity.java  CubeTransformActivity.java  EGLOutOfScreenDrawActivity.java  EtcCompressedTextureActivity.java  FboOutOfScreenDrawActivity.java  GrayTextureImageActivity.java  MagnifierTextureImageActivity.java  SimpleShapeActivity.java  SquareShapeActivity.java  TextureImageActivity.java  TriangleShapeActivity.java  TriangleShapeActivity_VAO.java  TriangleShapeActivity_VBO_EBO.java  TriangleShapeActivity_with_Matrix.java  WarmTextureImageActivity.java  YUV420RenderActivity.java
app/src/main/java/com/rzm/opengles_doc/simple/camera/: ICamera.java  KitkatCamera.java
app/src/main/java/com/rzm/opengles_doc/utils/: ZipPkmReader.java
app/src/main/res/layout/: activity_egl_back_env.xml  activity_gles2_main.xml  activity_gles3_main.xml  activity_main.xml  activity_simple_shape.xml  gles3_item.xml  gles3_list.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/rzm/opengles_doc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
